# agentfleet-self-healing-robots

./: .gitignore  Dockerfile  README.md  agent_fleet.db  enterprise_dashboard.json  evaluate_fleet.py  fleet_observability.jsonl  fleet_orchestrator.py  hal_wrapper.py  manager_agent.py  manager_tools.py  observability.py  recovery_database.py  recovery_history.json  requirements.txt  sim_tools.py  tool_api.py  tool_wrappers.py  worker_agent.py
evaluation_results/: enhanced_results_20251128_163237.json  v1_79.68_percent_data.json  v2_87.62_percent_data.json  v3_100_percent_data.json
ros_deployment/: agent_fleet.db  fleet_launch.py  fleet_launch_demo.sh  fleet_observability.jsonl  fleet_orchestrator.py  manager_agent.py  manager_tools.py  observability.py  recovery_database.py  recovery_history.json  ros_tools.py  sim_tools.py  spawn_fleet.py  spawn_visuals.py  tool_api.py  tool_wrappers.py  worker_agent.py
scripts/: build_hal.sh  verify_hal.py
src/hal/: CMakeLists.txt
src/hal/include/: collision_checker.hpp  path_smoother.hpp  robot_hal.hpp
src/hal/src/: bindings.cpp  collision_checker.cpp  path_smoother.cpp  robot_hal.cpp
